img not showing issue solve

--- a/style.css
+++ b/style.css
@@ -451,7 +451,7 @@
         width: 350px;
         height: 250px;
         border-radius: 15px;
-        background:linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(0,0,0,0.5) 100%), url('/images/trainer1.png');
+        background:linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(0,0,0,0.5) 100%), url('images/trainer1.png');
         background-position: top center;
         background-size: cover;
         padding: 15px;
@@ -465,7 +465,7 @@
         width: 350px;
         height: 250px;
         border-radius: 15px;
-        background:linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(0,0,0,0.5) 100%), url('/images/trainer2.png');
+        background:linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(0,0,0,0.5) 100%), url('images/trainer2.png');
         background-position: top center;
         background-size: cover;
         padding: 15px;
@@ -479,7 +479,7 @@
         width: 350px;
         height: 250px;
         border-radius: 15px;
-        background:linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(0,0,0,0.5) 100%), url('/images/trainer3.png');
+        background:linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(0,0,0,0.5) 100%), url('images/trainer3.png');
         background-position: top center;
         background-size: cover;
         padding: 15px;
@@ -492,7 +492,7 @@
         width: 350px;
         height: 250px;
         border-radius: 15px;
-        background:linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(0,0,0,0.5) 100%), url('/images/trainer4.png');
+        background:linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(0,0,0,0.5) 100%), url('images/trainer4.png');
         background-position: top center;
         background-size: cover;
         padding: 15px;
@@ -505,7 +505,7 @@
         width: 350px;
         height: 250px;
         border-radius: 15px;
-        background:linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(0,0,0,0.5) 100%), url('/images/trainer5.png');
+        background:linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(0,0,0,0.5) 100%), url('images/trainer5.png');
         background-position: top center;
         background-size: cover;
         padding: 15px;
@@ -518,7 +518,7 @@
         width: 350px;
         height: 250px;
         border-radius: 15px;
-        background:linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(0,0,0,0.5) 100%), url('/images/trainer6.png');
+        background:linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(0,0,0,0.5) 100%), url('images/trainer6.png');
         background-position: top center;
         background-size: cover;
         padding: 15px;
